kernel/tests/snapshots/runtime_cli_snapshots/validate_trellis_stuck_math_audit_result__ok.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": {
      "cone_clean_node": "",
      "confirm_need_input": false,
      "gap_decision": "",
      "gap_feedback": "",
      "global_repair_approve": false,
      "global_repair_approved_extension_node_ids": [],
      "global_repair_auditor_reason": "",
      "probe_paths": [
        ".trellis/stuck-math-audit/cycle-1-request-2/probe.lean"
      ],
      "report": "The active statement appears blocked by a missing hypothesis. The cited probe shows that the inductive step assumes monotonicity, but the underlying inductive predicate was not strengthened to carry it. The next worker should add a strengthened hypothesis or refactor the lemma signature.",
      "revision_actions": {
        "nodes": [],
        "targets": []
      },
      "route_needs_human": false,
      "route_tex": "",
      "set_live_polarity": "",
      "tasks": [
        {
          "body": "Read the cited scratch probe and decide whether the active statement needs a strengthened hypothesis.",
          "dismissed": false,
          "dismissed_at_cycle": null,
          "dismissed_reason": "",
          "id": "task-1",
          "title": "Check obstruction"
        }
      ]
    },
    "errors": [],
    "ok": true
  },
  "status": "validate_trellis_stuck_math_audit_result_ok"
}
